// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 exZTLD"
>
  
  <input
    error=""
    id=""
    label=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 exZTLD"
>
  <label
    className="Label-sc-1ny5bqy-0 bvIVUH"
    htmlFor="range-with-label"
  >
     
    Text label
     
  </label>
  <input
    error=""
    id="range-with-label"
    label="Text label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-18uoi37-0 exZTLD"
>
  
  <input
    error="Error message"
    id=""
    label=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  <div
    className="ErrorMessage-sc-19jcdrm-0 iRUhLB"
  >
    Error message
  </div>
</div>
`;
